# todo

./: Cargo.toml
src/: config.rs  main.rs
src/file_format/: eww.rs  mod.rs  tokenizer.rs
src/file_format/parser/: error.rs  mod.rs
