[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.10", features = ["derive"] }
edit = "0.1.4"
mlua = { version = "0.8", features = [ "luajit", "vendored", "serialize", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
textwrap = { version = "0.16.0", features = [ "terminal_size" ] }
xdg = "2.5.0"
